# soprano-factory

./: .gitignore  README.md  config.yaml  dataset.py  generate_dataset.py  pyproject.toml  requirements.txt  train.py
encoder/: codec.py  quantizer.py
